# Command_line_tools

./: .gitignore  LICENSE  README.md  hours.csv  pyproject.toml  requirements.txt
myclt/: README.md  __main__.py  main.py  pyproject.toml  requirements.txt  worker_salary_dataset.csv
myclt/ML/: __init__.py  base_models.py  base_session_adapter.py  batch_predict.py  linear_regression.py  model_storage.py  session_storage.py  visualization_utils.py
myclt/ML/base/: base_data.py
myclt/ML/linear_regression/: app_state.py  cli.py  core.py  data.py  preprocessing.py  session_adapter.py  ui.py  visualization.py
myclt/ML/logistic_regression/: __init__.py  app_state.py  cli.py  cli_multinomial.py  core.py  data.py  metrics.py  multinomial_app_state.py  multinomial_ui.py  preprocessing.py  session_adapter.py  ui.py  visualization.py
myclt/ML/supervised_learning/linear_regression/: app_state.py  cli.py  core.py  data.py  hyperparameter_tuning.py  metrics.py  preprocessing.py  session_adapter.py  ui.py  visualization.py
myclt/ML/supervised_learning/logistic_regression/: __init__.py  app_state.py  cli.py  cli_multinomial.py  core.py  data.py  hyperparameter_tuning.py  multinomial_app_state.py  multinomial_ui.py  preprocessing.py  session_adapter.py  ui.py  visualization.py
myclt/automation/: project_creator.py
myclt/common/: input_validation.py  ui_helpers.py
myclt/legacy_code/: cleaner.py  project_creator.py
myclt/ml_models/: lr1.pkl  lr2.pkl
myclt/ml_sessions/housing_v1/: data.npz
myclt/ml_sessions/housing_v2/: data.npz
myclt/system/: cleaner.py
(+14 files in other folders)
