[project]
name = "myclt"
version = "0.1.0"
description = "Command-line tools for system cleaning, project automation, and machine learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pipreqs>=0.5.0",
    "psutil>=5.9.0",
    "send2trash>=1.8.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]
